--- a/blocks/content.css
+++ b/blocks/content.css
@@ -2,3 +2,9 @@
   max-width: 1280px;
   padding: 0 80px;
 }
+
+@media screen and (max-width: 627px) {
+  .content {
+    padding: 0;
+  }
+}
