--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -21,6 +21,7 @@
 }
 
 .profile__column {
+  max-width: 420px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -32,6 +33,11 @@
   font-weight: 500;
   font-size: 2rem;
   line-height: 2rem;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .profile__desc {
@@ -40,13 +46,17 @@
   font-weight: 500;
   font-size: 1rem;
   line-height: 1rem;
-  color: rgba(33, 33, 33, 0.7);
+  color: rgba(33, 33, 33);
+  opacity: 70%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .profile__edit-button {
-  display: flex;
-  display: flex;
-  justify-content: space-between;
+  text-align: left;
   color: rgba(33, 33, 33);
   font-size: 1rem;
   line-height: 1rem;
@@ -58,7 +68,8 @@
 }
 
 .profile__edit-button:hover {
-  opacity: 0.8;
+  opacity: 70%;
+  cursor: pointer;
 }
 
 .profile__edit-image {
@@ -69,8 +80,6 @@
 }
 
 .profile__post-button {
-  display: flex;
-  justify-content: space-between;
   color: #fcf5e5;
   background-color: #212121;
   padding: 18px;
@@ -84,11 +93,12 @@
 }
 
 .profile__post-button:hover {
-  opacity: 4;
+  cursor: pointer;
 }
 
 .profile__post-image {
   height: 100%;
+  margin-right: 8px;
 }
 
 @media screen and (max-width: 627px) {
@@ -97,6 +107,7 @@
     text-align: center;
     max-width: 288px;
     padding-top: 20px;
+    margin: 0 auto;
   }
   .profile__avatar {
     flex-direction: column;
@@ -116,6 +127,7 @@
   }
 
   .profile__edit-button {
+    text-align: center;
     margin: 32px 0 20px;
   }
 
